Repository update and cleanup
* Removed java-spring-boot-demo
* Applied changes from ems-core upstream repo

Change-Id: I033aedf60caa805f84ad0789ae84dbcce4c8263f
Signed-off-by: ipatini <ipatini@mail.ntua.gr>